--- a/Beis.RegisterYourInterest/Views/Home/Index.cshtml
+++ b/Beis.RegisterYourInterest/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
         </ol>
 
 
-        <a role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button" asp-route="@RouteNames.HasCompaniesHousePage">
+        <a role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button" asp-route="@RouteNames.FindYourAddressPage">
             Register your interest
             <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                 <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" data-darkreader-inline-fill="" style="--darkreader-inline-fill:currentColor;"></path>
