--- a/Beis.RegisterYourInterest/Views/ApplicantEmailAddress/Index.cshtml
+++ b/Beis.RegisterYourInterest/Views/ApplicantEmailAddress/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EmailAddressViewModel
 @{
-  ViewData["Title"] = "What is your work email address?";
+  ViewData["Title"] = "What is your email address?";
 }
 
   <nav class="govuk-!-margin-bottom-9">
@@ -12,11 +12,11 @@
         <div class="govuk-form-group" highlight-error-for="EmailAddress" error-class="govuk-form-group--error">
           <h1 class="govuk-label-wrapper">
             <label class="govuk-label govuk-label--l" asp-for="EmailAddress">
-              What is your work email address?
+              What is your email address?
             </label>
           </h1>
-          <p class="govuk-body">If your application is successful, we will send your software discount link to this address.</p>
-          <div id="email-hint" class="govuk-hint">Work email address</div>
+          
+          <div id="email-hint" class="govuk-hint">Email address</div>
           @if (!ViewData.ModelState.IsValid)
           {
             <span class="govuk-error-message">Enter an email address in the correct format, like name@example.com</span>
