--- a/Beis.RegisterYourInterest/Views/ApplicantPhoneNumber/Index.cshtml
+++ b/Beis.RegisterYourInterest/Views/ApplicantPhoneNumber/Index.cshtml
@@ -16,7 +16,7 @@
               What is your phone number?
             </label>
           </h1>
-          <p class="govuk-body">Enter your business telephone number. This could be a landline or mobile.</p>
+          <p class="govuk-body">Enter your telephone number. This could be a landline or mobile.</p>
           <div id="phone-number-hint" class="govuk-hint">Phone number</div>
           <span asp-validation-for="PhoneNumber" class="govuk-error-message"></span>
           <input asp-for="PhoneNumber" class="govuk-input govuk-!-width-three-quarters" spellcheck="false" aria-describedby="phone-number-hint" autocomplete="tel">
