--- a/Beis.RegisterYourInterest/Views/Home/Index.cshtml
+++ b/Beis.RegisterYourInterest/Views/Home/Index.cshtml
@@ -10,16 +10,16 @@
 
         <h2 class="govuk-heading-m">About the program</h2>
         <p class="govuk-body">In order to register your interest in this program you will need to provide us with:</p>
-        <ol class="govuk-list govuk-list--number">
-            <li>Your companies house or fincancial conduct authority details.</li>
-            <li>Your name.</li>
-            <li>Your business role or job title.</li>            
+        <ol class="govuk-list govuk-list--number">            
+            <li>Your name.</li>                     
             <li>Your email address.</a></li>
             <li>Your phone number.</li>
+            <li>Your Address</li>
+            <li>Confirm your email address</li>
         </ol>
 
 
-        <a role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button" asp-route="@RouteNames.FindYourAddressPage">
+        <a role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button" asp-route="@RouteNames.ApplicantFullNamePage">
             Register your interest
             <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                 <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" data-darkreader-inline-fill="" style="--darkreader-inline-fill:currentColor;"></path>
